--- a/speedo/Makefile
+++ b/speedo/Makefile
@@ -15,7 +15,7 @@ htest:	htest.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ -o $@
 
 SPDLIB = reset.o do_char.o do_trns.o set_spcs.o set_trns.o \
-	out_bl2d.o out_blk.o out_scrn.o out_util.o keys.o
+	out_bl2d.o out_blk.o out_scrn.o out_util.o keys.o sp_err.o
 
 # spencode.o spfuncs.o spfile.o spfont.o spglyph.o
 
