--- a/win32/Makefile
+++ b/win32/Makefile
@@ -3,7 +3,9 @@ CFLAGS = -mwin32 -O2 -Wall -I../include
 LDFLAGS = -s
 LIBS= -lgdi32 -lcomdlg32
 
-all: fontdisp.exe
+PROGRAMS = fontdisp.exe
+
+all: $(PROGRAMS)
 
 fontdisp.exe: fontdisp.o decode.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ $(LIBS) -o $@
@@ -15,4 +17,4 @@ deocde.o: decode.c
 	$(CC) $(CFLAGS) $< -c -o $@
 
 clean::
-	rm -f fontdisp.exe *.o
+	rm -f $(PROGRAMS) *.o
