Some more work on speedo font viewer; add tooltips

--- a/spdview/Makefile
+++ b/spdview/Makefile
@@ -4,7 +4,8 @@ LDFLAGS = -s
 LIBS= -lcurl -lpng12 -lz
 
 SPDLIB = reset.o do_char.o do_trns.o set_spcs.o set_trns.o \
-	out_bl2d.o out_blk.o out_scrn.o out_util.o out_outl.o keys.o sp_err.o
+	out_bl2d.o out_blk.o out_scrn.o out_util.o out_outl.o \
+	keys.o sp_err.o bics2uni.o
 
 PROGRAMS = spdview.cgi
 
@@ -57,6 +58,9 @@ keys.o: ../speedo/keys.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 sp_err.o: ../speedo/sp_err.c
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+bics2uni.o: ../speedo/bics2uni.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 clean::
