--- a/spdview/Makefile
+++ b/spdview/Makefile
@@ -19,7 +19,7 @@ spdview.cgi: spdview.o cgic.o glib.o $(SPDLIB) writepng.o cgiutil.o
 	cp $@ ../www
 
 ttfview.cgi: ttfview.o cgic.o glib.o $(TTFLIB) writepng.o cgiutil.o
-	$(CC) $(CFLAGS) $(LDFLAGS) $^ $(LIBS) -L../freetype -lttf -lbz2 -o $@
+	$(CC) $(CFLAGS) $(LDFLAGS) $^ -L../freetype -lttf -lbz2 $(LIBS) -o $@
 	cp $@ ../www
 
 spdview.o: spdview.c
