Add standalone fntconv utility

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -3,7 +3,7 @@ CFLAGS = -O2 -Wall -I../include
 LDFLAGS = -s
 LIBS=
 
-PROGRAMS = fnt2bdf pcf2bdf
+PROGRAMS = fnt2bdf pcf2bdf fntconv
 
 all: $(PROGRAMS)
 
@@ -11,6 +11,9 @@ fnt2bdf: fnt2bdf.c
 	$(CC) $(CFLAGS) $(LDFLAGS) $< $(LIBS) -o $@
 
 pcf2bdf: pcf2bdf.c
+	$(CC) $(CFLAGS) $(LDFLAGS) $< $(LIBS) -o $@
+
+fntconv: fntconv.c
 	$(CC) $(CFLAGS) $(LDFLAGS) $< $(LIBS) -o $@
 
 clean::
