--- a/tos/Makefile
+++ b/tos/Makefile
@@ -25,7 +25,7 @@ LDFLAGS = -s
 LIBS = -lgem
 MATH_LIB = -lm
 
-PROGRAMS = gemfedit.prg fontdisp.prg spdview.prg sptobdf.ttp
+PROGRAMS = gemfedit.prg fontdisp.prg spdview.prg sptobdf.ttp fntconv.ttp
 
 all: $(PROGRAMS)
 
@@ -50,6 +50,9 @@ SPDLIB = reset.o do_char.o do_trns.o set_spcs.o set_trns.o \
 	keys.o sp_err.o bics2uni.o
 
 sptobdf.ttp: sptobdf.o $(SPDLIB)
+	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(MATH_LIB)
+
+fntconv.ttp: fntconv.o getopt.o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^ $(MATH_LIB)
 
 spdview.prg: spdview.o $(SPDLIB)
@@ -95,6 +98,9 @@ sp_err.o: ../speedo/sp_err.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 bics2uni.o: ../speedo/bics2uni.c
+	$(CC) $(CFLAGS) -c -o $@ $<
+
+fntconv.o: ../tools/fntconv.c
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 
