Display cross for non-existing chars

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -16,5 +16,12 @@ fontdisp.o: fontdisp.c
 deocde.o: decode.c
 	$(CC) $(CFLAGS) $< -c -o $@
 
+win32: fontdisp.exe
+
+fontdisp.exe:
+	i686-pc-mingw32-gcc $(CFLAGS) -c fontdisp.c
+	i686-pc-mingw32-gcc $(CFLAGS) -c decode.c
+	i686-pc-mingw32-gcc $(LDFLAGS) -o $@ fontdisp.o decode.o -lgdi32 -lcomdlg32
+
 clean::
-	rm -f $(PROGRAMS) *.o
+	rm -f $(PROGRAMS) fontdisp.exe *.o
