Rename FT_Strerror -> FT_Error_String

--- a/win32/Makefile
+++ b/win32/Makefile
@@ -1,6 +1,6 @@
 CC = i686-pc-mingw32-gcc
 CFLAGS = -mwin32 -O2 -Wall -I../include
-LDFLAGS = -s
+LDFLAGS = -s -mwindows
 LIBS= -lgdi32 -lcomdlg32
 
 PROGRAMS = fontdisp.exe
@@ -13,7 +13,7 @@ fontdisp.exe: fontdisp.o decode.o
 fontdisp.o: fontdisp.c
 	$(CC) $(CFLAGS) $< -c -o $@
 
-deocde.o: decode.c
+decode.o: decode.c
 	$(CC) $(CFLAGS) $< -c -o $@
 
 clean::
