--- a/win32/Makefile
+++ b/win32/Makefile
@@ -1,7 +1,7 @@
 CC = i686-pc-mingw32-gcc
-CFLAGS = -mwin32 -O2 -Wall -I../include
+CFLAGS = -mwin32 -O2 -Wall -I../include -DHAVE_PNG_H
 LDFLAGS = -s -mwindows
-LIBS= -lgdi32 -lcomdlg32
+LIBS= -lpng -lgdi32 -lcomdlg32
 
 PROGRAMS = fontdisp.exe
 
@@ -10,10 +10,10 @@ all: $(PROGRAMS)
 fontdisp.exe: fontdisp.o decode.o
 	$(CC) $(CFLAGS) $(LDFLAGS) $^ $(LIBS) -o $@
 
-fontdisp.o: fontdisp.c
+fontdisp.o: fontdisp.c ../unix/fontdisp.c
 	$(CC) $(CFLAGS) $< -c -o $@
 
-decode.o: decode.c
+decode.o: decode.c ../unix/decode.c
 	$(CC) $(CFLAGS) $< -c -o $@
 
 clean::
