freetype: add some dependencies in makefile

--- a/freetype/Makefile
+++ b/freetype/Makefile
@@ -24,20 +24,20 @@ ftdebug.o: $(ft2_srcdir)/src/base/ftdebug.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 ftbase.o: $(ft2_srcdir)/src/base/ftbase.c \
-		$(ft2_srcdir)/src/base/ftadvanc.c \
-		$(ft2_srcdir)/src/base/ftcalc.c \
-		$(ft2_srcdir)/src/base/ftdbgmem.c \
-		$(ft2_srcdir)/src/base/ftfntfmt.c \
-		$(ft2_srcdir)/src/base/ftgloadr.c \
-		$(ft2_srcdir)/src/base/fthash.c \
-		$(ft2_srcdir)/src/base/ftmac.c \
-		$(ft2_srcdir)/src/base/ftobjs.c \
-		$(ft2_srcdir)/src/base/ftoutln.c \
-		$(ft2_srcdir)/src/base/ftrfork.c \
-		$(ft2_srcdir)/src/base/ftsnames.c \
-		$(ft2_srcdir)/src/base/ftstream.c \
-		$(ft2_srcdir)/src/base/fttrigon.c \
-		$(ft2_srcdir)/src/base/ftutil.c
+	$(ft2_srcdir)/src/base/ftadvanc.c \
+	$(ft2_srcdir)/src/base/ftcalc.c \
+	$(ft2_srcdir)/src/base/ftdbgmem.c \
+	$(ft2_srcdir)/src/base/ftfntfmt.c \
+	$(ft2_srcdir)/src/base/ftgloadr.c \
+	$(ft2_srcdir)/src/base/fthash.c \
+	$(ft2_srcdir)/src/base/ftmac.c \
+	$(ft2_srcdir)/src/base/ftobjs.c \
+	$(ft2_srcdir)/src/base/ftoutln.c \
+	$(ft2_srcdir)/src/base/ftrfork.c \
+	$(ft2_srcdir)/src/base/ftsnames.c \
+	$(ft2_srcdir)/src/base/ftstream.c \
+	$(ft2_srcdir)/src/base/fttrigon.c \
+	$(ft2_srcdir)/src/base/ftutil.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 ftbbox.o: $(ft2_srcdir)/src/base/ftbbox.c
@@ -105,16 +105,40 @@ ftwinfnt.o: $(ft2_srcdir)/src/base/ftwinfnt.c
 
 
 
-autofit.o: $(ft2_srcdir)/src/autofit/autofit.c
+autofit.o: $(ft2_srcdir)/src/autofit/autofit.c \
+	$(ft2_srcdir)/src/autofit/afangles.c \
+	$(ft2_srcdir)/src/autofit/afblue.c \
+	$(ft2_srcdir)/src/autofit/afcjk.c \
+	$(ft2_srcdir)/src/autofit/afdummy.c \
+	$(ft2_srcdir)/src/autofit/afglobal.c \
+	$(ft2_srcdir)/src/autofit/afhints.c \
+	$(ft2_srcdir)/src/autofit/afindic.c \
+	$(ft2_srcdir)/src/autofit/aflatin.c \
+	$(ft2_srcdir)/src/autofit/aflatin2.c \
+	$(ft2_srcdir)/src/autofit/afloader.c \
+	$(ft2_srcdir)/src/autofit/afmodule.c \
+	$(ft2_srcdir)/src/autofit/afranges.c \
+	$(ft2_srcdir)/src/autofit/afshaper.c \
+	$(ft2_srcdir)/src/autofit/afwarp.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-bdf.o: $(ft2_srcdir)/src/bdf/bdf.c
+bdf.o: $(ft2_srcdir)/src/bdf/bdf.c \
+	$(ft2_srcdir)/src/bdf/bdflib.c \
+	$(ft2_srcdir)/src/bdf/bdfdrivr.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 ftbzip2.o: $(ft2_srcdir)/src/bzip2/ftbzip2.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-ftcache.o: $(ft2_srcdir)/src/cache/ftcache.c
+ftcache.o: $(ft2_srcdir)/src/cache/ftcache.c \
+	$(ft2_srcdir)/src/cache/ftcbasic.c \
+	$(ft2_srcdir)/src/cache/ftccache.c \
+	$(ft2_srcdir)/src/cache/ftccmap.c \
+	$(ft2_srcdir)/src/cache/ftcglyph.c \
+	$(ft2_srcdir)/src/cache/ftcimage.c \
+	$(ft2_srcdir)/src/cache/ftcmanag.c \
+	$(ft2_srcdir)/src/cache/ftcmru.c \
+	$(ft2_srcdir)/src/cache/ftcsbits.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 cff.o: $(ft2_srcdir)/src/cff/cff.c \
@@ -135,16 +159,32 @@ cff.o: $(ft2_srcdir)/src/cff/cff.c \
 	$(ft2_srcdir)/src/cff/cf2stack.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-type1cid.o: $(ft2_srcdir)/src/cid/type1cid.c
+type1cid.o: $(ft2_srcdir)/src/cid/type1cid.c \
+	$(ft2_srcdir)/src/cid/cidgload.c \
+	$(ft2_srcdir)/src/cid/cidload.c \
+	$(ft2_srcdir)/src/cid/cidobjs.c \
+	$(ft2_srcdir)/src/cid/cidparse.c \
+	$(ft2_srcdir)/src/cid/cidriver.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-ftgzip.o: $(ft2_srcdir)/src/gzip/ftgzip.c
+ftgzip.o: $(ft2_srcdir)/src/gzip/ftgzip.c \
+	$(ft2_srcdir)/src/gzip/zutil.c \
+	$(ft2_srcdir)/src/gzip/inftrees.c \
+	$(ft2_srcdir)/src/gzip/infutil.c \
+	$(ft2_srcdir)/src/gzip/infcodes.c \
+	$(ft2_srcdir)/src/gzip/infblock.c \
+	$(ft2_srcdir)/src/gzip/inflate.c \
+	$(ft2_srcdir)/src/gzip/adler32.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-ftlzw.o: $(ft2_srcdir)/src/lzw/ftlzw.c
+ftlzw.o: $(ft2_srcdir)/src/lzw/ftlzw.c \
+	$(ft2_srcdir)/src/lzw/ftzopen.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-pcf.o: $(ft2_srcdir)/src/pcf/pcf.c
+pcf.o: $(ft2_srcdir)/src/pcf/pcf.c \
+	$(ft2_srcdir)/src/pcf/pcfdrivr.c \
+	$(ft2_srcdir)/src/pcf/pcfread.c \
+	$(ft2_srcdir)/src/pcf/pcfutil.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 pfr.o: $(ft2_srcdir)/src/pfr/pfr.c \
@@ -156,7 +196,13 @@ pfr.o: $(ft2_srcdir)/src/pfr/pfr.c \
 	$(ft2_srcdir)/src/pfr/pfrsbit.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-psaux.o: $(ft2_srcdir)/src/psaux/psaux.c
+psaux.o: $(ft2_srcdir)/src/psaux/psaux.c \
+	$(ft2_srcdir)/src/psaux/afmparse.c \
+	$(ft2_srcdir)/src/psaux/psauxmod.c \
+	$(ft2_srcdir)/src/psaux/psconv.c \
+	$(ft2_srcdir)/src/psaux/psobjs.c \
+	$(ft2_srcdir)/src/psaux/t1cmap.c \
+	$(ft2_srcdir)/src/psaux/t1decode.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 pshinter.o: $(ft2_srcdir)/src/pshinter/pshinter.c \
@@ -166,13 +212,26 @@ pshinter.o: $(ft2_srcdir)/src/pshinter/pshinter.c \
 	$(ft2_srcdir)/src/pshinter/pshrec.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-psnames.o: $(ft2_srcdir)/src/psnames/psnames.c
+psnames.o: $(ft2_srcdir)/src/psnames/psnames.c \
+	$(ft2_srcdir)/src/psnames/psmodule.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-raster.o: $(ft2_srcdir)/src/raster/raster.c
+raster.o: $(ft2_srcdir)/src/raster/raster.c \
+	$(ft2_srcdir)/src/raster/ftraster.c \
+	$(ft2_srcdir)/src/raster/ftrend1.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-sfnt.o: $(ft2_srcdir)/src/sfnt/sfnt.c
+sfnt.o: $(ft2_srcdir)/src/sfnt/sfnt.c \
+	$(ft2_srcdir)/src/sfnt/pngshim.c \
+	$(ft2_srcdir)/src/sfnt/sfdriver.c \
+	$(ft2_srcdir)/src/sfnt/sfobjs.c \
+	$(ft2_srcdir)/src/sfnt/ttbdf.c \
+	$(ft2_srcdir)/src/sfnt/ttcmap.c \
+	$(ft2_srcdir)/src/sfnt/ttkern.c \
+	$(ft2_srcdir)/src/sfnt/ttload.c \
+	$(ft2_srcdir)/src/sfnt/ttmtx.c \
+	$(ft2_srcdir)/src/sfnt/ttpost.c \
+	$(ft2_srcdir)/src/sfnt/ttsbit.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 smooth.o: $(ft2_srcdir)/src/smooth/smooth.c \
@@ -180,13 +239,29 @@ smooth.o: $(ft2_srcdir)/src/smooth/smooth.c \
 	$(ft2_srcdir)/src/smooth/ftsmooth.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-truetype.o: $(ft2_srcdir)/src/truetype/truetype.c
+truetype.o: $(ft2_srcdir)/src/truetype/truetype.c \
+	$(ft2_srcdir)/src/truetype/ttdriver.c \
+	$(ft2_srcdir)/src/truetype/ttgload.c \
+	$(ft2_srcdir)/src/truetype/ttgxvar.c \
+	$(ft2_srcdir)/src/truetype/ttinterp.c \
+	$(ft2_srcdir)/src/truetype/ttobjs.c \
+	$(ft2_srcdir)/src/truetype/ttpload.c \
+	$(ft2_srcdir)/src/truetype/ttsubpix.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-type1.o: $(ft2_srcdir)/src/type1/type1.c
+type1.o: $(ft2_srcdir)/src/type1/type1.c \
+	$(ft2_srcdir)/src/type1/t1afm.c \
+	$(ft2_srcdir)/src/type1/t1driver.c \
+	$(ft2_srcdir)/src/type1/t1gload.c \
+	$(ft2_srcdir)/src/type1/t1load.c \
+	$(ft2_srcdir)/src/type1/t1objs.c \
+	$(ft2_srcdir)/src/type1/t1parse.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-type42.o: $(ft2_srcdir)/src/type42/type42.c
+type42.o: $(ft2_srcdir)/src/type42/type42.c \
+	$(ft2_srcdir)/src/type42/t42drivr.c \
+	$(ft2_srcdir)/src/type42/t42objs.c \
+	$(ft2_srcdir)/src/type42/t42parse.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 winfnt.o: $(ft2_srcdir)/src/winfonts/winfnt.c
@@ -196,10 +271,40 @@ gemfnt.o: $(ft2_srcdir)/src/gemfonts/gemfnt.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 
-otvalid.o: $(ft2_srcdir)/src/otvalid/otvalid.c
+otvalid.o: $(ft2_srcdir)/src/otvalid/otvalid.c \
+	$(ft2_srcdir)/src/otvalid/otvbase.c \
+	$(ft2_srcdir)/src/otvalid/otvcommn.c \
+	$(ft2_srcdir)/src/otvalid/otvgdef.c \
+	$(ft2_srcdir)/src/otvalid/otvgpos.c \
+	$(ft2_srcdir)/src/otvalid/otvgsub.c \
+	$(ft2_srcdir)/src/otvalid/otvjstf.c \
+	$(ft2_srcdir)/src/otvalid/otvmath.c \
+	$(ft2_srcdir)/src/otvalid/otvmod.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
-gxvalid.o: $(ft2_srcdir)/src/gxvalid/gxvalid.c
+gxvalid.o: $(ft2_srcdir)/src/gxvalid/gxvalid.c \
+	$(ft2_srcdir)/src/gxvalid/gxvbsln.c \
+	$(ft2_srcdir)/src/gxvalid/gxvcommn.c \
+	$(ft2_srcdir)/src/gxvalid/gxvfeat.c \
+	$(ft2_srcdir)/src/gxvalid/gxvjust.c \
+	$(ft2_srcdir)/src/gxvalid/gxvkern.c \
+	$(ft2_srcdir)/src/gxvalid/gxvlcar.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmod.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmort.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmort0.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmort1.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmort2.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmort4.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmort5.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmorx.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmorx0.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmorx1.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmorx2.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmorx4.c \
+	$(ft2_srcdir)/src/gxvalid/gxvmorx5.c \
+	$(ft2_srcdir)/src/gxvalid/gxvopbd.c \
+	$(ft2_srcdir)/src/gxvalid/gxvprop.c \
+	$(ft2_srcdir)/src/gxvalid/gxvtrak.c
 	$(AM_V_CC)$(CC) -c $(CFLAGS) -o $@ $<
 
 
@@ -226,7 +331,8 @@ FONTDOBJ = cff.o type1.o type42.o type1cid.o truetype.o bdf.o pfr.o winfnt.o gem
 TTFLIB = $(BASEOBJ) $(AHINTOBJ) $(PSOBJ) $(RASTEROBJ) sfnt.o ftcache.o otvalid.o gxvalid.o $(FONTDOBJ) $(GZOBJ)
 
 libttf.a: $(TTFLIB)
-	$(AM_V_AR)$(AR) cr $@ $(TTFLIB); $(RANLIB) $@
+	@rm $@
+	$(AM_V_AR)$(AR) crs $@ $(TTFLIB); $(RANLIB) $@
 
 clean::
 	$(RM) $(TTFLIB) $(PROGRAMS)
