--- a/win32/Makefile
+++ b/win32/Makefile
@@ -1,4 +1,5 @@
-CC = i686-pc-mingw32-gcc
+EVAL_MINGWCC := case `uname -s` in CYGWIN*) echo i686-w64-mingw32-gcc ;; *) echo i686-pc-mingw32-gcc;; esac
+CC = $(shell $(EVAL_MINGWCC))
 CFLAGS = -mwin32 -O2 -Wall -I../include -DHAVE_PNG_H
 LDFLAGS = -s -mwindows
 LIBS= -lpng -lgdi32 -lcomdlg32
