Update glibc wrapper to include new symbols from glibc 2.36

--- a/unix/Makefile
+++ b/unix/Makefile
@@ -13,7 +13,7 @@ endif
 all: $(PROGRAMS)
 
 fontdisp: fontdisp.o decode.o
-	$(CC) $(CFLAGS) $(LDFLAGS) $^ $(LIBS) -o $@
+	$(CC) $(CFLAGS) $(LDFLAGS) $^ $(LIBS) -o $@ libc.so
 
 fontdisp.o: fontdisp.c
 	$(CC) $(CFLAGS) $< -c -o $@
